# plug-n-product

./: .gitignore  .pylintrc  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/static/css/: style.css
app/templates/: base.html  index.html  register.html  signin.html  signin_password.html
application/: __init__.py  auth.py  db.py  htmx_tools.py  models.py  schema.sql
application/static/css/: style.css
application/templates/: base.html  index.html  link.html  pricing.html  register.html  signin.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py
