[project]
name = "application"
version = "1.0.0"
description = "TBA"
dependencies = [
    "blinker>=1.9.0",
    "click>=8.2.1",
    "flask>=3.1.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "jinja2-fragments>=1.9.0",
    "markupsafe>=3.0.2",
    "werkzeug>=3.1.3",
]
requires-python = ">=3.12"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["application"]

[dependency-groups]
dev = [
    "astroid>=3.3.11",
    "coverage>=7.9.2",
    "dill>=0.4.0",
    "execnet>=2.1.1",
    "iniconfig>=2.1.0",
    "isort>=6.0.1",
    "mccabe>=0.7.0",
    "packaging>=25.0",
    "platformdirs>=4.3.8",
    "pluggy>=1.6.0",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "tomlkit>=0.13.3",
]

